# todo-leptos-actix

./: Cargo.toml  README.md
.sqlx/: query-40de2b805963795f9a20b1caf881ede8d3952f50046d1a409b1713407d74aa7d.json  query-4814e528f3d3ce7f30d65dee752035e433d21924eb92f107a442006bbe622e21.json  query-4a5dc1572e05715add0a8b46a1e07bb26b0f76929628fd704ceb33ca62211e1f.json  query-5aea1a36ad67277ccd66d38bd43e190295d2aef3a411aa99e1e27523722b4da4.json  query-6d3ed1be5ed114a731624d4bf03802bdf7cd8cd43390b24334f6d37de27146e2.json  query-7d892dd4645a0d11a863c3861db844af19aebc00675058139bc1524a8567527f.json  query-8e408bb49bf0aaa86ba726002b53dc04c7d5222469f02321b9b2b7070c8b0b05.json  query-a39709f488946c7608cee1868e37b5d8f041866705dd6dd160b0eae54985b0e9.json  query-c893cdba830fdf60168a04589ff3144514ee472aa9fd93e42736d752aad8f0b4.json  query-fc7c83c6bcc7c141b8c9371ca588ea42f8799b71e0814717eca562bbdb959416.json
app/: Cargo.toml
app/src/: app.rs  fallback.rs  lib.rs
app/src/common/: api_error.rs  app_state.rs  errors.rs  mod.rs
app/src/components/layout/: message_banner.rs  navbar.rs
app/src/components/ui/: button.rs  button_link.rs  checkbox.rs  checkbox_with_label.rs  main_title.rs  select_input.rs  select_with_error.rs  text_area.rs  text_with_error.rs
app/src/domain/task/: task_db.rs  task_services.rs
app/src/domain/task/components/: tasks_list.rs  tasks_panel.rs
app/src/domain/task/model/: task.rs
app/src/domain/task/routing/: routes.rs  task_edit_page.rs  task_page.rs
app/src/domain/user/: user_db.rs  user_services.rs
app/src/domain/user/model/: user.rs
app/src/domain/user/routing/: create_user_page.rs  login_page.rs
server/: Cargo.toml
server/src/: db.rs  main.rs
style/: main.scss
